@@ -1,3 +1,11 @@
+2008-12-15  Don Porter	<dgp@users.sourceforge.net>
+
+	TIP #338 IMPLEMENTATION
+
+	* doc/Tk_Main.c:	Removed the last two '#include "tclInt.h"'.
+	* generic/tkMain.c:	Tk is now limited to Tcl's public interface.
+	* macosx/tkMacOSXInit.c:
+
 2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/demos/fontchoose.tcl: Simple fontchooser demo
